--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
       color:#FFF;
       background-color:#444444;
     }
-    .img-gallery {
+    img.img-gallery {
       width: 100%;
       border: 1px whitesmoke solid;
       box-shadow: 2px 2px 2px #00000030;
