--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,21 @@
       color:#FFF;
       background-color:#444444;
     }
+
+	.MN-card {
+		background: #FFF;
+		border: 1px #e0e0e0 solid;
+		margin-bottom: 33px;
+		padding: 10px;
+		cursor: pointer;
+		box-shadow: 0px 3px 13px #00000057;
+	}
+
+	.MN-card p {
+		font-size: 15px;
+		padding-top: 9px;
+	}
+
     img.img-gallery {
       width: 100%;
       border: 1px whitesmoke solid;
@@ -56,8 +71,82 @@
 		padding: 101px;
 	}
 
+
+.jumbotron {
+    background-color: #1d2124;
+}
+
+
+.jumbotron h1 {
+    color: #FFFFFF;
+    font-weight: bold;
+}
+
+.jumbotron p.lead {
+    color: #FFFFFF;
+}
+
+
+	
 	* {
 		font-family: 'Montserrat', sans-serif;
 	}
 
+#gallery {
+    max-height: 500px;
+    overflow: scroll;
+    border: 1px #d6d6d6 solid;
+    padding: 31px;
+    box-shadow: 2px 2px 2px #00000030;
+    background: whitesmoke;
+}
 
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
+
+footer {
+    background: #007aff;
+    min-height: 400px;
+    padding: 29px;
+    color: #FFF;
+}
+footer a:hover {
+    color: rgb(255 255 255 / 48%);
+}
+
+footer a {
+    color: #FFFFFF;
+}
+
+footer h6 {
+    text-transform: uppercase;
+    font-weight: bold;
+    margin-bottom: 14px;
+}
+
+footer ul li {
+    font-size: 12px;
+    line-height: 28px;
+}
+footer p {
+    text-align: center;
+    font-size: 14px;
+}
